--- a/config/.lintstagedrc
+++ b/config/.lintstagedrc
@@ -1,10 +1,4 @@
 {
-  "*.js": [
-    "eslint --fix",
-    "git add"
-  ],
-  "*.ts": [
-    "eslint --fix",
-    "git add"
-  ]
+  "src/**/*.js": ["eslint --fix"],
+  "src/**/*.ts": ["eslint --fix"]
 }
