--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "scripts": {
         "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
         "create": "npm run build && npm run test",
-        "build": "tsc -p .",
+        "build": "rm -rf ./lib && tsc -p .",
         "test": "echo \"Error: no test specified\" && exit 1",
         "test:local": "sudo npm i -g && cstory",
         "refresh": "rm -rf ./node_modules ./package-lock.json && npm install",
