feat: change cli run name

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
     "bin": {
-        "cstory": "./lib/index.js"
+        "cs": "./lib/index.js"
     },
     "scripts": {
         "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
