--- a/package.json
+++ b/package.json
@@ -28,21 +28,22 @@
     "dependencies": {
         "chalk": "^4.1.0",
         "clear": "^0.1.0",
+        "cosmiconfig": "^7.0.0",
         "figlet": "^1.4.0",
         "gitlog": "^4.0.0",
         "path": "^0.12.7",
         "yargs": "^15.4.0"
     },
     "devDependencies": {
-        "@commitlint/cli": "^9.0.1",
-        "@commitlint/config-conventional": "^9.0.1",
+        "@commitlint/cli": "^10.0.0",
+        "@commitlint/config-conventional": "^10.0.0",
         "@types/clear": "^0.1.0",
         "@types/figlet": "^1.2.0",
         "@types/node": "^14.0.14",
         "@types/yargs": "^15.0.5",
         "@typescript-eslint/eslint-plugin": "^2.27.0",
         "@typescript-eslint/parser": "^3.5.0",
-        "commitizen": "^4.1.2",
+        "commitizen": "^4.2.1",
         "cz-conventional-changelog": "^3.2.0",
         "eslint": "^7.4.0",
         "eslint-config-prettier": "^6.11.0",
@@ -51,9 +52,11 @@
         "lint-staged": "^10.2.11",
         "nodemon": "^2.0.4",
         "prettier": "^2.0.5",
-        "standard-version": "^8.0.1",
+        "standard-version": "^9.0.0",
         "ts-node": "^8.10.2",
         "typescript": "^3.9.6"
     },
-    "files": ["lib/**/*"]
+    "files": [
+        "lib/**/*"
+    ]
 }
