--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "cosmiconfig": "^7.0.0",
         "figlet": "^1.4.0",
         "gitlog": "^4.0.0",
+        "module-alias": "^2.2.2",
         "path": "^0.12.7",
         "yargs": "^15.4.0"
     },
@@ -58,5 +59,8 @@
     },
     "files": [
         "lib/**/*"
-    ]
+    ],
+    "_moduleAliases": {
+        "src": "lib"
+    }
 }
