feat(build): npm script dev:watch

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "codestory": "./lib/index.js"
     },
     "scripts": {
-        "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
+        "start": "node ./lib/index.js",
+        "dev:watch": "watch 'npm run build && npm run start' src",
         "create": "npm run build && npm run test",
         "prepare": "npm run build",
         "build": "tsc -p .",
@@ -54,8 +55,8 @@
         "nodemon": "^2.0.4",
         "prettier": "^2.0.5",
         "standard-version": "^9.0.0",
-        "ts-node": "^8.10.2",
-        "typescript": "^3.9.6"
+        "typescript": "^3.9.6",
+        "watch": "^1.0.2"
     },
     "files": [
         "lib/**/*"
