--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "license": "MIT",
     "dependencies": {
         "chalk": "^4.1.0",
+        "chrono-node": "^2.1.8",
         "clear": "^0.1.0",
         "cosmiconfig": "^7.0.0",
         "figlet": "^1.4.0",
